--- a/html/arsvangden.html
+++ b/html/arsvangden.html
@@ -44,7 +44,7 @@
     <div class="header__content">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand me-4" href="../index.html">SPORTER</a>
+                <a class="navbar-brand me-4" href="../index.html">YouSport</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -236,7 +236,12 @@
         </div>
         <div class="footer__contact">
             <div class="row">
-            
+                <div class="row">
+                    <div class="footer__contact--icon col-lg-12 col-xl-6">
+                        <a href="https://github.com/mthy113/Sporterprj.git" target="_blank"><i class="fa-brands fa-github"></i></a> 
+                        <a href="https://www.instagram.com/oncloud.studio/profilecard/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/YouSport.vn" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                    </div>
 
                 <div class="col-xl-6 copyRight">
                     <div>
