--- a/html/checkout.html
+++ b/html/checkout.html
@@ -50,7 +50,7 @@
 
 <!--header-->
 <header class="header-checkout">
-    <h2><a href="../index.html">Sporter</a></h2>
+    <h2><a href="../index.html">YouSport</a></h2>
     <div >
         <a href="tel:0374812873"><i class="fa-solid fa-phone"></i> Contact us</a>
     </div>
@@ -357,7 +357,12 @@
         </div>
         <div class="footer__contact">
             <div class="row">
-            
+                <div class="row">
+                    <div class="footer__contact--icon col-lg-12 col-xl-6">
+                        <a href="https://github.com/mthy113/Sporterprj.git" target="_blank"><i class="fa-brands fa-github"></i></a> 
+                        <a href="https://www.instagram.com/oncloud.studio/profilecard/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/YouSport.vn" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                    </div>
 
                 <div class="col-xl-6 copyRight">
                     <div>
