--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                                     Sản phẩm khác
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="../sporterprj/html/updating.html">Đồ bơi</a></li>
-                                    <li><a class="dropdown-item" href="../sporterprj/html/updating.html">Phụ kiện thể thao</a></li>
+                                    <li><a class="dropdown-item" href="html/updating.html">Đồ bơi</a></li>
+                                    <li><a class="dropdown-item" href="html/updating.html">Phụ kiện thể thao</a></li>
                                 </ul>
                             </li>
                         </ul>
