--- a/html/aoJuve.html
+++ b/html/aoJuve.html
@@ -64,8 +64,8 @@
                                 Sản phẩm khác
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="../index.html">Phụ kiện Yoga</a></li>
-                                <li><a class="dropdown-item" href="../index.html">Phụ kiện bóng đá</a></li>
+                                <li><a class="dropdown-item" href="updating.html">Phụ kiện Yoga</a></li>
+                                <li><a class="dropdown-item" href="updating.html">Phụ kiện bóng đá</a></li>
                             </ul>
                         </li>
                     </ul>
