--- a/html/aoReal.html
+++ b/html/aoReal.html
@@ -54,10 +54,10 @@
                             <a class="nav-link active" aria-current="page" href="../index.html">Áo đội tuyển</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../index.html">Áo câu lạc bộ</a>
+                            <a class="nav-link" href="updating.html">Áo câu lạc bộ</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../index.html">Giày đá bóng</a>
+                            <a class="nav-link" href="updating.html">Giày đá bóng</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="../index.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
