--- a/html/returnAndExchange.html
+++ b/html/returnAndExchange.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sporter</title>
+    <title>YouSport</title>
     <!-- fontawesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -143,14 +143,14 @@
                         </div>
                         <div class="detail-part">
                             <h4 class="detail-p">Return Exceptions</h4>
-                            <p>SPORTER does not accept returns on gift cards, customized products and bodywear including face masks. Custom products are nonrefundable, except in the case of manufacturing or material defects in which case you may contact Customer Service via phone or email for assistance.
+                            <p>YOUSPORT does not accept returns on gift cards, customized products and bodywear including face masks. Custom products are nonrefundable, except in the case of manufacturing or material defects in which case you may contact Customer Service via phone or email for assistance.
                             </p>
-                            <p>Certain product launches and puma.com exclusives have a shorter window for returns and exchanges. This includes but is not limited to SPORTER x LAMELO BALL and FENTY x PUMA Shoes which must be returned / exchanged within 15 days.
+                            <p>Certain product launches and puma.com exclusives have a shorter window for returns and exchanges. This includes but is not limited to YOUSPORT x LAMELO BALL and FENTY x PUMA Shoes which must be returned / exchanged within 15 days.
                             </p>
                         </div>
                         <div class="detail-part">
-                            <h4 class="detail-p">Returns to SPORTER Retail Stores</h4>
-                            <p>You may return items purchased on puma.com to any SPORTER store. Please bring the original form of payment and a physical or digital copy of the Order Confirmation Email with you so you may be refunded. Purchases made by credit card will be credited back to that original card (including pre-paid gift cards). If you paid with a SPORTER Gift Card, Apple Pay, Google Pay or PayPal, then a SPORTER Gift Card will be issued with the refunded amount.
+                            <h4 class="detail-p">Returns to YOUSPORT Retail Stores</h4>YOUSPORT
+                            <p>You may return items purchased on puma.com to any YOUSPORT store. Please bring the original form of payment and a physical or digital copy of the Order Confirmation Email with you so you may be refunded. Purchases made by credit card will be credited back to that original card (including pre-paid gift cards). If you paid with a  Gift Card, Apple Pay, Google Pay or PayPal, then a YOUSPORT Gift Card will be issued with the refunded amount.
                             </p>
                         </div>
                         <div class="detail-part">
@@ -218,7 +218,7 @@
                             </p>
                         </div>
                         <div class="detail-part">
-                            <h4 class="detail-p">How can I redeem a SPORTER Gift Card?</h4>
+                            <h4 class="detail-p">How can I redeem a YOUSPORT Gift Card?</h4>
                             <p>You can enter your Gift Card information during checkout under the Payment Information section. Click “Add a Gift Card” and enter the unique code as well as the pin number. You may also check your balance at that time. Learn more about PUMA Gift Cards and check your balance on our Gift Card page.
                             </p>
                         </div>
@@ -237,7 +237,7 @@
                         </div>
                         <div class="detail-part">
                             <h4 class="detail-p">Which browser works best for your site?</h4>
-                            <p>At SPORTER, we're committed to be the world’s fastest sports brand. Our teams make use of the newest technologies to improve your experience. Modern, up-to-date browsers allow you to take full advantage of this, as well as providing improved security and performance. We recommend using the latest versions of Google Chrome or Safari when browsing the PUMA website. Using an alternate browser will result in an inferior experience where some features may not work as intended.
+                            <p>At YOUSPORT, we're committed to be the world’s fastest sports brand. Our teams make use of the newest technologies to improve your experience. Modern, up-to-date browsers allow you to take full advantage of this, as well as providing improved security and performance. We recommend using the latest versions of Google Chrome or Safari when browsing the PUMA website. Using an alternate browser will result in an inferior experience where some features may not work as intended.
                             </p>
                         </div>
                         <div class="detail-part">
@@ -290,12 +290,12 @@
                             <p>Effective July, 2023
                             </p>
                             <p>
-                                SPORTER, and the SPORTER group of companies (collectively, “PUMA” or "we", "us", or "our") respects the privacy of all of our visitors and pledges to provide you with the best online experience possible. This SPORTER Privacy Policy (“Privacy Policy”) describes what Personal Information (defined below) we collect from you via our Services (defined below), how we may use it and the steps we take to ensure that it is protected. This Privacy Policy applies to Personal Information we may collect from you through any SPORTER online services that posts this Privacy Policy, including our mobile app(s) for users located in the U.S. and Canada, as well as offline collection through our retail stores located in the U.S. and Canada, SPORTER sponsored events, SPORTER emails originated from the U.S. and Canada, and official SPORTER operated surveys and sweepstakes entry forms, or in any other instance when you contact our operations in the U.S. and Canada (collectively “Services”). This Privacy Policy does not apply to our job applicants or current or former employees or contractors except to the extent that they use our website and with regard to our biometric retention statement and with regard to how to make a privacy rights request.
+                                YOUSPORT, and the YOUSPORT group of companies (collectively, “PUMA” or "we", "us", or "our") respects the privacy of all of our visitors and pledges to provide you with the best online experience possible. This YOUSPORT Privacy Policy (“Privacy Policy”) describes what Personal Information (defined below) we collect from you via our Services (defined below), how we may use it and the steps we take to ensure that it is protected. This Privacy Policy applies to Personal Information we may collect from you through any  online services that posts this Privacy Policy, including our mobile app(s) for users located in the U.S. and Canada, as well as offline collection through our retail stores located in the U.S. and Canada, YOUSPORT sponsored events, YOUSPORT emails originated from the U.S. and Canada, and official YOUSPORT operated surveys and sweepstakes entry forms, or in any other instance when you contact our operations in the U.S. and Canada (collectively “Services”). This Privacy Policy does not apply to our job applicants or current or former employees or contractors except to the extent that they use our website and with regard to our biometric retention statement and with regard to how to make a privacy rights request.
                             </p>
                         </div>
                         <div class="detail-part">
                             <h4 class="detail-p">BY ACCESSING OR USING THE SERVICES, ON ANY COMPUTER, MOBILE PHONE, TABLET, CONSOLE OR OTHER PHYSICAL OR ELECTRONIC DEVICE (COLLECTIVELY, "DEVICE"), OR BY OTHER METHOD, YOU CONSENT TO OUR PRIVACY POLICY.</h4>
-                            <p>SPORTER may modify this Privacy Policy at any time effective upon its posting, and additional privacy notices or policies may also apply. Your continued use of our products and services constitutes your acceptance to this Privacy Policy, applicable additional notices and policies and any updates. By using our Services, you agree to the Service’s Terms & Conditions governing the use of the Services and accept our practices as outlined in this Privacy Policy. Do not use the Service if you do not ACCEPT this Privacy Policy and AGREE TO the Terms and Conditions.
+                            <p>YOUSPORT may modify this Privacy Policy at any time effective upon its posting, and additional privacy notices or policies may also apply. Your continued use of our products and services constitutes your acceptance to this Privacy Policy, applicable additional notices and policies and any updates. By using our Services, you agree to the Service’s Terms & Conditions governing the use of the Services and accept our practices as outlined in this Privacy Policy. Do not use the Service if you do not ACCEPT this Privacy Policy and AGREE TO the Terms and Conditions.
                             </p>
                         </div>
                     </div>
@@ -304,8 +304,8 @@
                         <div class="detail-part">
                             <h4 class="detail-p">If you have any additional questions or comments, we would love to hear from you!</h4>
                             <h5>Submit your query using any of the methods below.</h5>
-                            <p><span>Email:</span> <a href="mailto:nguyentuananhtttc@gmail.com">nguyentuananhtttc@gmail.com</a></p>
-                            <p><span>Toll-free number:</span> <a href="#">0374812873</a></p>
+                            <p><span>Email:</span> <a href="mailto:nguyentuananhtttc@gmail.com">yousportvn@gmail.com</a></p>
+                            <p><span>Toll-free number:</span> <a href="#">1800 6749 </a></p>
                     </div>
                 </div>
                     <div class="tab-pane fade" id="shipping" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
